@@ -65,29 +65,76 @@ dump(std::ostream& os) const {
 
 
 
+void
+istream_line_splitter::
+increase_buffer_size() {
+
+    assert(_buf_size>1);
+    const unsigned old_buf_size(_buf_size);
+    const char* old_buf(_buf);
+    _buf_size *= 2;
+    _buf=new char[_buf_size];
+    memcpy(_buf,old_buf,(old_buf_size-1)*sizeof(char));
+    delete [] old_buf;
+}
+
+
+
+static
+bool
+check_istream(std::istream& is,
+              unsigned& line_no) {
+
+    if(is) {
+        line_no++;
+        // regular successful line read:
+        return true; 
+    }
+
+    if     (is.eof()) return false;
+    else if(is.fail()) {
+        if(is.bad()) {
+            std::ostringstream oss;
+            oss << "ERROR: unexpected failure while attempting to read line " << (line_no+1) << "\n";
+            throw blt_exception(oss.str().c_str());
+        }
+        is.clear();
+    }
+
+    // incomplete line read in this case, have to increase buffer size:
+    return true;
+}
+
+
+
 bool
 istream_line_splitter::
 parse_line() {
     _n_word=0;
-    _line_no++;
     _is.getline(_buf,_buf_size);
-    const unsigned len(strlen(_buf));
-    if((len+1) >= _buf_size){
-        std::ostringstream oss;
-        oss << "ERROR: input exceeds buffer size on line_no: " << _line_no << "\n\n";
-        throw blt_exception(oss.str().c_str());
+    const unsigned previous_line_no(_line_no);
+    if(! check_istream(_is,_line_no)) return false; // normal eof
+    unsigned buflen(strlen(_buf));
+
+    while(((buflen+1) == _buf_size) && (previous_line_no==_line_no)) {
+        increase_buffer_size();
+        _is.getline(_buf+buflen,_buf_size-buflen);
+        if(! check_istream(_is,_line_no)) {
+            std::ostringstream oss;
+            oss << "ERROR: Unexpected read failure in parse_line() at line_no: " << _line_no << "\n";
+            throw blt_exception(oss.str().c_str());
+        } 
+        buflen=(strlen(_buf));
     }
-    
-    if(! _is) {
-        if(_is.eof()) { return false; } // normal eof:
-        
+
+    if((buflen+1) >_buf_size) {
         std::ostringstream oss;
-        oss << "ERROR: Unexpected read failure in parse_line().\n";
+        oss << "ERROR: Unexpected read failure in parse_line() at line_no: " << _line_no << "\n";
         throw blt_exception(oss.str().c_str());
     }
     
     if(NULL == _buf) return false;
-    assert(len);
+    assert(buflen);
     
     // do a low-level separator parse:
     {  
